@@ -1,21 +1,40 @@
 <?php
+
+$bugsUrl = $this->project->getBugsUrl();
+if (preg_match('/github/', $bugsUrl)) {
+    $issueTracker = 'GitHub';
+    $issueType    = 'Issue Tracker';
+} elseif (preg_match('/mantis/', $bugsUrl)) {
+    $issueTracker = 'Mantis';
+    $issueType    = 'Bug Tracker';
+} else {
+    $issueTracker = '';
+    $issueType    = 'Tracker';
+}
+
+
 // ENGLISH
 if ('en' == $this->locale->getLanguage()):
 ?>
-<h3>Reporting bugs</h3>
+<h3>About bug reporting</h3>
 
 <p class="info">
-    <?php echo $this->project->name; ?> uses the <a href="http://www.mantisbt.org/" rel="external">Mantis Bug Tracker</a>
-    for reporting and solving bugs.
+    <?php echo $this->project->name; ?> uses the
+    <a href="<?php echo $this->project->getBugsUrl(); ?>" rel="external" target="pulse_bugs"><?php echo $issueTracker . ' ' . $issueType; ?></a>
+    for reporting and solving issues.
     <br/>
     To help us to quickly solve bugs we request you read the suggestions below.
 </p>
 
 <div class="indent">
+    <h4>Make an account<?php echo ($issueTracker ? (' on ' . $issueTracker) : ''); ?></h4>
+    <p class="info">
+        You need a (free) account<?php echo ($issueTracker ? (' on ' . $issueTracker) : ''); ?> to report issues.
+    </p>
     <h4>Report each bug by itself</h4>
     <p class="info">
         Every bug has to be assigned to someone to solve it.
-        Combining multiple problems in a single report can obstruct this process.
+        Combining multiple problems in a single issue can obstruct this process.
     </p>
     <h4>Add a link</h4>
     <p class="info">
@@ -25,37 +44,40 @@ if ('en' == $this->locale->getLanguage()):
     <p class="info">
         Usually a screenshot helps us to solve the problem quicker.
     </p>
-    <ul class="indent">
-        <li>Press <p style="font-family: monospace;">[Alt]^[Print Screen]</p>.</li>
+    <ul>
+        <li>Press <span style="font-family: monospace;">[Alt]^[Print Screen]</span>.</li>
         <li>Open Paint or another drawing package or even Word.</li>
         <li>Paste the clipboard and save the result as a file.</li>
-        <li>Add this file to the bug using "Upload File" in the bug tracker.</li>
+        <li>Add this file to the issue.</li>
     </ul>
-    <h4>Make an account</h4>
-    <p class="info">
-        This takes little effort and enables us to request extra information when we need it to solve the bug
-        and allows us to report to you when the problem is solved.
-    </p>
 </div>
 
-<div class="centerAlign">
-    <a href="<?php echo $this->project->contact['bugsUrl'] ?>" class="actionlink" rel="external" target="pulse_bugs">Report a bug</a>
-</div><?php
-endif;
+
+<h3>Report a bug</h3>
+
+<p class="info">
+    You can find the
+    <a href="<?php echo $this->project->getBugsUrl(); ?>" rel="external" target="pulse_bugs"><?php echo $issueTracker . ' ' . $issueType; ?> here</a>.
+</p><?php endif;
 
 // NEDERLANDS
 if ('nl' == $this->locale->getLanguage()):
 ?>
-<h3>Problemen melden</h3>
+<h3>Over het melden van problemen</h3>
 
 <p class="info">
-    <?php echo $this->project->name; ?> gebruikt de <a href="http://www.mantisbt.org/" rel="external">Mantis Bug Tracker</a>
+    <?php echo $this->project->name; ?> gebruikt de
+    <a href="<?php echo $this->project->getBugsUrl(); ?>" rel="external" target="pulse_bugs"><?php echo $issueTracker . ' ' . $issueType; ?></a>
     voor de rapportage en verwerking van problemen.
     <br/>
     Voor een snelle verwerking van problemen verzoeken wij u de onderstaande suggesties te lezen.
 </p>
 
 <div class="indent">
+    <h4>Maak een account<?php echo ($issueTracker ? (' op ' . $issueTracker) : ''); ?></h4>
+    <p class="info">
+        Je hebt een (gratis) account<?php echo ($issueTracker ? (' op ' . $issueTracker) : ''); ?> op problemen te rapporteren.
+    </p>
     <h4>Meld elk probleem apart</h4>
     <p class="info">
         Elk probleem moet aan iemand toegewezen worden voor behandeling.
@@ -69,20 +91,18 @@ if ('nl' == $this->locale->getLanguage()):
     <p class="info">
         Met een screenshot kunnen wij een probleem meestal sneller oplossen.
     </p>
-    <ul class="indent">
-        <li>Druk op <p style="font-family: monospace;">[Alt]^[Print Screen]</p>.</li>
+    <ul>
+        <li>Druk op <span style="font-family: monospace;">[Alt]^[Print Screen]</span>.</li>
         <li>Open Paint of een ander tekenpakket of desnoods Word.</li>
         <li>Plak (paste) de inhoud van het clipboard en sla het bestand op.</li>
-        <li>Voeg het bestand toe aan de melding middels "Upload File" in de bug tracker.</li>
+        <li>Voeg het bestand toe aan de melding.</li>
     </ul>
-    <h4>Maak een account aan</h4>
-    <p class="info">
-        Dit kost weinig tijd en hierdoor kunnen wij u extra informatie vragen als dat nodig is om het probleem op te lossen
-        en kunnen wij u op de hoogte te stellen van de voortgang.
-    </p>
 </div>
 
-<div class="centerAlign">
-    <a href="<?php echo $this->project->contact['bugsUrl'] ?>" class="actionlink" rel="external" target="pulse_bugs">Meld een probleem</a>
-</div><?php
+<h3>Meld het probleem</h3>
+
+<p class="info">
+    <a href="<?php echo $this->project->getBugsUrl(); ?>" rel="external" target="pulse_bugs">Hier</a> vindt u de
+    <a href="<?php echo $this->project->getBugsUrl(); ?>" rel="external" target="pulse_bugs"><?php echo $issueTracker . ' ' . $issueType; ?></a>.
+</p><?php
 endif; ?>
